# ium-21z

./: .gitignore  README.md  etap_2_dokumentacja.ipynb  pyproject.toml
app/: ab_testing.py  application.py  model_usage_functions.py
app/logs/: ab_testing_logs.json
data/interim/csv/: buy_sessions_cleaned.csv
data/interim/pickles/: buy_sessions_cleaned.pickle
data/processed/csv/: products_per_week.csv
data/processed/pickles/: products_per_week.pickle
data/raw/: deliveries.jsonl  products.jsonl  users.jsonl
data/raw/second/: .gitattributes  deliveries.jsonl  sessions.jsonl  users.jsonl
models/: base_model.pkl
notebooks/: arima.ipynb  arima_testing.ipynb  base_model.ipynb  data_preprocessing.ipynb  eda_etap1.ipynb  eda_etap2.ipynb  eda_new_data.ipynb  eda_v2.ipynb  etap_1_badanie_jakosci_danych.ipynb  etap_1_wersja_2_badanie_jakosci_danych.ipynb  linear_regression.ipynb  moving_average.ipynb  new_xgboost.ipynb  non_arima_testing.ipynb  plots.ipynb  xgboost.ipynb
reports/: profile_deliveries.html  profile_products.html  profile_sessions.html  profile_users.html
sales_forecasting/models/: base_model.py  custom_xgboost.py
tests/: test_make_dataset.py
